smaller screen spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
 	max-width: 1200px;
 	margin: 0 auto;
 }
+
+@media only screen and (max-width: 1200px) {
+	.wrapper {
+		padding: 0 20px;
+	}
+}
